--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ca97843d",
    "metadata": {
     "colab": {
@@ -138,14 +138,14 @@
        "DKI Jakarta              0.001407           0.015189        0.000300"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#import ready to preprocessed data set\n",
-    "our_df = pd.read_csv('manipulated_features.csv')\n",
+    "our_df = pd.read_csv('dataset/manipulated_features.csv')\n",
     "preprocess_it = our_df.drop(columns=['Case Fatality Rate', 'Case Recovered Rate']).set_index('Province')\n",
     "preprocess_it.head()"
    ]
@@ -431,7 +431,7 @@
     "id": "-6ShUqVpucqo"
    },
    "source": [
-    "Even if our features already spread in the same unit, we still need to conduct StandardScaler because KMeans used distance-based measurements to determine the similarity between data points. If we didn't standarize it, then our cluster result won't be valid. Outliers will be grouped into its unique cluster."
+    "Even if our features already spread in the same unit, we still need to conduct StandardScaler because KMeans used distance-based measurements to determine the similarity between data points. If we didn't standarize it, then our cluster result won't be valid. Outliers will be used to form its unique cluster."
    ]
   },
   {
@@ -1299,16 +1299,16 @@
     "**So, the member of each cluster are:**\n",
     "\n",
     "\n",
-    "* Cluster 0: 3 Province consist of Kalimantan Tengah, Kalimantan Utara, Papua\n",
+    "* Cluster 0: 3 Provinces consist of Kalimantan Tengah, Kalimantan Utara, Papua\n",
     "\n",
     "\n",
-    "* Cluster 1: 18 Province consist of Aceh, Banten, Bengkulu, Jambi, Jawa Barat, Kalimantan Barat, Kepulauan Bangka Belitung, Lampung, Maluku, Maluku Utara, Nusa Tenggara Barat, Nusa Tenggara Timur, Sulawesi Barat, Sulawesi Tengah, Sulawesi Selatan, Sulawesi Tenggara, Sumatera Selatan, Sumatera Utara\n",
+    "* Cluster 1: 18 Provinces consist of Aceh, Banten, Bengkulu, Jambi, Jawa Barat, Kalimantan Barat, Kepulauan Bangka Belitung, Lampung, Maluku, Maluku Utara, Nusa Tenggara Barat, Nusa Tenggara Timur, Sulawesi Barat, Sulawesi Tengah, Sulawesi Selatan, Sulawesi Tenggara, Sumatera Selatan, Sumatera Utara\n",
     "\n",
     "\n",
     "* Cluster 2: 1 Province which is DKI Jakarta\n",
     "\n",
     "\n",
-    "* Cluster 3: 12 Province which is Bali, Daerah Istimewa Yogyakarta, Gorontalo, Jawa Tengah, Jawa Timur, Kalimantan Selatan, Kalimantan Timur, Kepulauan Riau, Papua Barat, Riau, Sulawesi Utara, Sumatera Barat"
+    "* Cluster 3: 12 Provinces which is Bali, Daerah Istimewa Yogyakarta, Gorontalo, Jawa Tengah, Jawa Timur, Kalimantan Selatan, Kalimantan Timur, Kepulauan Riau, Papua Barat, Riau, Sulawesi Utara, Sumatera Barat"
    ]
   },
   {
@@ -1946,7 +1946,7 @@
     "\n",
     "**Disclaimer:**\n",
     "\n",
-    "Actually we want to grouping formed clusters into 4 categories (Green, Yellow, Orange, Red) according to real world zone described by the government. But, we can't do that because our cluster's characteristic don't meet the criteria so we describe our own zone according to its order from the most active Covid-19 transmission to the less active Covid-19 transmission.\n",
+    "Actually we want to grouping formed clusters into 4 categories (Green, Yellow, Orange, Red) according to real world zone described by the government. But, we can't do that because our cluster's characteristic doesn't meet the criteria so we describe our own zone according to its order from the most active Covid-19 transmission to the least active Covid-19 transmission.\n",
     "\n",
     "\n",
     "1. **Cluster 0**\n",
@@ -1992,11 +1992,11 @@
     "Because our data set is historical data from March 2020 to December 2020, our recommendation can be implemented in the early of 2021.\n",
     "\n",
     "After grouping 34 provinces into its 4 unique clusters based on 3 features used: New Active Cases, New Recovered, New Deaths. Now we're able to give recommendation for the Indonesia central government\n",
-    "to give the funding of Covid-19 Pandemic to the cluster with the most active transmission of Covid-19 and the second active transmission of Covid-19 firstly.\n",
+    "to give the Covid-19 response fund according to the cluster with the most active transmission of Covid-19 and the second active transmission of Covid-19 firstly.\n",
     "\n",
-    "Hence, the funding of Covid-19 Pandemic can be given to DKI Jakarta, Kalimantan Tengah, Kalimantan Utara, Papua. The rest 30 Provinces will also obtain the funding of Covid-19 in the future once the government has already collected the funding of Covid-19 Pandemic, the amount of funding given should be considered (according to its zone).\n",
+    "Hence, the funding of Covid-19 Pandemic can be given to DKI Jakarta, Kalimantan Tengah, Kalimantan Utara, Papua. The rest 30 Provinces will also obtain the Covid-19 response fund in the future once the government has already collected the funding of Covid-19 Pandemic. The amount of funding given should be considered as well (according to its zone).\n",
     "\n",
-    "In short, the Indonesia central government can distribute the funding of Covid-19 Pandemic by prioritizing the following order:\n",
+    "In short, the Indonesia central government can distribute the Covid-19 response fund by prioritizing the following order:\n",
     "* Zone A, consist of DKI Jakarta\n",
     "\n",
     "* Zone B, consist of Kalimantan Tengah, Kalimantan Utara, Papua\n",
@@ -2019,11 +2019,7 @@
    "id": "2a29de99",
    "metadata": {},
    "source": [
-    "We will always discover different result of cluster's member, even if we use the same number of k. Once we're sure that we have already obtained the best result, then\n",
-    "\n",
-    "1. Evaluate the model.\n",
-    "2. Don't waste more time to try the same algorithm with the same number of optimal k over and over again, utilize our time to thinking about possible features to use. In order to give better recommendation, we can add external data to strengthen our cluster's characteristic such as health service index per province, the number of medical facilities, the number of health workers, and so on. Not only that, from the given data set we can also consider to add another features.\n",
-    "2. Try another clustering algorithms, such as agglomerative clustering, DBSCAN, OPTICS, or even optimizing our existed model."
+    "In order to give better recommendation, we can add external data to strengthen our cluster's characteristic such as health service index per province, the number of medical facilities, the number of health workers, and so on. Not only that, from the given data set we can also consider to add more features."
    ]
   },
   {
