--- a/Preparation.ipynb
+++ b/Preparation.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6a25d52d",
    "metadata": {
     "id": "6a25d52d",
@@ -188,14 +188,14 @@
        "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#load data set\n",
-    "raw_df = pd.read_csv('2020-covid-19-data.csv', sep=',')\n",
+    "raw_df = pd.read_csv('dataset/2020-covid-19-data.csv', sep=',')\n",
     "raw_df.head(3)"
    ]
   },
@@ -646,9 +646,7 @@
     "id": "8b124930"
    },
    "source": [
-    "The Indonesia central government will give the funding of Covid-19 pandemic, due to the funding limitless they ask us to prioritize the funding of Covid-19 pandemic according to Province's characteristic or the Covid-19 transmission.\n",
-    "\n",
-    "We choose to arrange recommendation based on the Covid-19 transmission."
+    "The Indonesia central government will give the Covid-19 response fund, due to the funding limitless they ask us to prioritize the Covid-19 response fund according to Province's Covid-19 cases number."
    ]
   },
   {
@@ -1194,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "mRg2I0OFtBh0",
    "metadata": {
     "colab": {
@@ -1293,13 +1291,13 @@
        "9653               0.8487  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ready_df = pd.read_csv('clean-data-upd.csv', sep = ',')\n",
+    "ready_df = pd.read_csv('dataset/clean-data-upd.csv', sep = ',')\n",
     "#drop Unnamed: 0\n",
     "ready_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "ready_df.tail(2)"
@@ -1445,7 +1443,7 @@
     "id": "b6f77aca"
    },
    "source": [
-    "Let them as the way they are, we can't treat them. Outliers will be grouped into its unique cluster."
+    "Let them as the way they are, we can't treat them. Outliers will be generated into its unique cluster."
    ]
   },
   {
@@ -1677,7 +1675,7 @@
     "#because we wanna know total variable of each province from 2020-03-01 to 2020-12-31\n",
     "#do these number make sense? yes, it does. just compared them with official report from satgas Covid-19\n",
     "\n",
-    "#while, we calculated median for Case Fatality Rate, and Case Recovered Rate\n",
+    "#meanwhile, we calculated median for Case Fatality Rate, and Case Recovered Rate\n",
     "#because we wanna know median of each variable for each province during 9 months\n",
     "#we don't use mean because of outliers"
    ]
@@ -2353,7 +2351,7 @@
    },
    "source": [
     "**Conclusion:**\n",
-    "1.   Jawa Tengah, DKI Jakarta, Jawa Barat, Banten, and Jawa Timur are 5 provinces with the highest New Active Cases\n",
+    "1.   Jawa Tengah, DKI Jakarta, Jawa Barat, Banten, and Jawa Timur are 5 province with the highest New Active Cases\n",
     "2.   While, Maluku Utara, Kalimantan Barat, Sulawesi Barat, Papua Barat, and Gorontalo are 5 province with the lowest New Active Cases"
    ]
   },
@@ -2570,7 +2568,7 @@
    },
    "source": [
     "**Conclusion:**\n",
-    "Province with the highest Case Fatality Rate are Jawa Tengah, Jawa Timur, Bengkulu, Sumatera Selatan, and Nusa Tenggara Barat. While province with the lowest Case Fatality Rate are Kalimantan Utara, Kalimantan Barat, Nusa Tenggara Timur, Papua, and Kepulauan Bangka Belitung."
+    "Province with the highest Case Fatality Rate are Jawa Tengah, Jawa Timur, Bengkulu, Sumatera Selatan, and Nusa Tenggara Barat. Meanwhile province with the lowest Case Fatality Rate are Kalimantan Utara, Kalimantan Barat, Nusa Tenggara Timur, Papua, and Kepulauan Bangka Belitung."
    ]
   },
   {
@@ -2891,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "734a4dcf",
    "metadata": {
     "id": "734a4dcf"
@@ -2904,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "_5SI-HcAhzKJ",
    "metadata": {
     "colab": {
@@ -2931,7 +2929,7 @@
        "Name: Date, Length: 9654, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2944,7 +2942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9A0UtlXZianE",
    "metadata": {
     "colab": {
@@ -2958,10 +2956,7 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "  <div id=\"df-adda14be-9c90-4229-b1c7-05c6a6a7eeff\">\n",
-       "    <div class=\"colab-df-container\">\n",
-       "      <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -3077,83 +3072,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "</div>\n",
-       "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-adda14be-9c90-4229-b1c7-05c6a6a7eeff')\"\n",
-       "              title=\"Convert this dataframe to an interactive table.\"\n",
-       "              style=\"display:none;\">\n",
-       "        \n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-       "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-       "  </svg>\n",
-       "      </button>\n",
-       "      \n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      flex-wrap:wrap;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "      <script>\n",
-       "        const buttonEl =\n",
-       "          document.querySelector('#df-adda14be-9c90-4229-b1c7-05c6a6a7eeff button.colab-df-convert');\n",
-       "        buttonEl.style.display =\n",
-       "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "        async function convertToInteractive(key) {\n",
-       "          const element = document.querySelector('#df-adda14be-9c90-4229-b1c7-05c6a6a7eeff');\n",
-       "          const dataTable =\n",
-       "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                     [key], {});\n",
-       "          if (!dataTable) return;\n",
-       "\n",
-       "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "            + ' to learn more about interactive tables.';\n",
-       "          element.innerHTML = '';\n",
-       "          dataTable['output_type'] = 'display_data';\n",
-       "          await google.colab.output.renderOutput(dataTable, element);\n",
-       "          const docLink = document.createElement('div');\n",
-       "          docLink.innerHTML = docLinkHtml;\n",
-       "          element.appendChild(docLink);\n",
-       "        }\n",
-       "      </script>\n",
-       "    </div>\n",
-       "  </div>\n",
-       "  "
+       "</div>"
       ],
       "text/plain": [
        "            Kasus Aktif  Kasus Sembuh  Kasus Meninggal  Peluang Meninggal  \\\n",
@@ -3183,7 +3102,7 @@
        "2020-12-31         0.79700  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3243,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "XUmC6p6Rqagv",
    "metadata": {
     "id": "XUmC6p6Rqagv"
@@ -3256,7 +3175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "wRxw9Yf1rE2x",
    "metadata": {
     "colab": {
@@ -3270,10 +3189,7 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "  <div id=\"df-59471f8b-f369-420c-bf30-a6408f07dba8\">\n",
-       "    <div class=\"colab-df-container\">\n",
-       "      <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -3347,83 +3263,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "</div>\n",
-       "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-59471f8b-f369-420c-bf30-a6408f07dba8')\"\n",
-       "              title=\"Convert this dataframe to an interactive table.\"\n",
-       "              style=\"display:none;\">\n",
-       "        \n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-       "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-       "  </svg>\n",
-       "      </button>\n",
-       "      \n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      flex-wrap:wrap;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "      <script>\n",
-       "        const buttonEl =\n",
-       "          document.querySelector('#df-59471f8b-f369-420c-bf30-a6408f07dba8 button.colab-df-convert');\n",
-       "        buttonEl.style.display =\n",
-       "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "        async function convertToInteractive(key) {\n",
-       "          const element = document.querySelector('#df-59471f8b-f369-420c-bf30-a6408f07dba8');\n",
-       "          const dataTable =\n",
-       "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                     [key], {});\n",
-       "          if (!dataTable) return;\n",
-       "\n",
-       "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "            + ' to learn more about interactive tables.';\n",
-       "          element.innerHTML = '';\n",
-       "          dataTable['output_type'] = 'display_data';\n",
-       "          await google.colab.output.renderOutput(dataTable, element);\n",
-       "          const docLink = document.createElement('div');\n",
-       "          docLink.innerHTML = docLinkHtml;\n",
-       "          element.appendChild(docLink);\n",
-       "        }\n",
-       "      </script>\n",
-       "    </div>\n",
-       "  </div>\n",
-       "  "
+       "</div>"
       ],
       "text/plain": [
        "         Date  Kasus Aktif  Kasus Sembuh  Kasus Meninggal  Peluang Meninggal  \\\n",
@@ -3441,14 +3281,14 @@
        "9          0.7970  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#read csv\n",
-    "ready_monthly = pd.read_csv('/content/drive/MyDrive/ISE!-DSA-2022-Mini-Project-Hello-World/monthly_agg_EDA.csv')\n",
+    "ready_monthly = pd.read_csv('dataset/monthly_agg_EDA.csv')\n",
     "ready_monthly.tail()"
    ]
   },
@@ -3580,9 +3420,9 @@
     "\n",
     "1. Trend of 'Monthly New Active Cases in Indonesia' shows intense increasement in December 2020.\n",
     "    \n",
-    "2. The amount of 'Monthly New Recovered in Indonesia' keep increasing per month, with assumption the more resident get infected the more resident get recovered too.\n",
+    "2. The amount of 'Monthly New Recovered in Indonesia' keep increasing per month, with assumption the more resident get infected the more resident will get recovered too.\n",
     "    \n",
-    "3. The amount of 'Monthly New Deaths in Indonesia' also keep increasing per month, we assume that the more resident get infected, the more resident get recovered too, but it also followed by the increasement of dead resident."
+    "3. The amount of 'Monthly New Deaths in Indonesia' also keep increasing per month, we assume that the more resident get infected, the more resident will get recovered too, but it also followed by the number increasement of dead resident."
    ]
   },
   {
